# agent-studio-mcp

./: .env.example  .gitignore  README.md
.github/workflows/: trimble-agentic-docs-mcp.yml
docs/: urls.txt
docs/api/: agents.json  evals.json  ingest.json  knowledge-base.json  model-control-plane.json  modes-inference.json  tools.json
trimble-agentic-docs-mcp/: pyproject.toml
trimble-agentic-docs-mcp/examples/: mcp-cursor-config.example.json  nginx-mcp-agent-studio.conf.example  trimble-agentic-docs-mcp.service.example  trimble-agentic-docs-refresh.env.example  trimble-agentic-docs-refresh.service.example  trimble-agentic-docs-refresh.timer.example
trimble-agentic-docs-mcp/tests/: test_json_output.py  test_list_api_specs_tool.py  test_manifest_summary.py  test_operation_guide.py  test_repo_env.py  test_smoke_docs_api.py  test_store.py  test_transport_security_bind.py  test_upstream_urls.py
trimble-agentic-docs-mcp/tests/fixtures/: minimal.json
trimble-agentic-docs-mcp/trimble_agentic_docs_mcp/: __init__.py  __main__.py  admin_tools.py  dev_docs_sync.py  http_auth_retry.py  json_output.py  manifest_summary.py  operation_guide.py  repo_env.py  runtime_state.py  scheduler_runner.py  server.py  store.py  sync_cli.py  transport_security_bind.py  upstream_sync.py
