[project]
name = "trimble-agentic-docs-mcp"
version = "0.1.0"
description = "Streamable HTTP MCP: Trimble Agentic AI OpenAPI specs, cached /docs extracts, and sync tooling."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "trafilatura>=1.12.0",
]

[project.scripts]
trimble-agentic-docs-mcp = "trimble_agentic_docs_mcp.server:main"
trimble-agentic-openapi-sync = "trimble_agentic_docs_mcp.sync_cli:main"
trimble-agentic-docs-refresh = "trimble_agentic_docs_mcp.scheduler_runner:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trimble_agentic_docs_mcp"]
